--- a/style.css
+++ b/style.css
@@ -1,10 +1,61 @@
-div {
+* {
+    box-sizing: border-box;
+}
+
+body {
+    text-align: center;
+    margin: 0;
+}
+
+.container {
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+}
+#file_form {
+    background-color : rgba(13, 180, 0, 0.7);
+    border-radius: 10px;
+    padding: 30px 30px;
+    max-width: 450px;
+    margin: 40px  auto;
+    color: #ffffff;
+
+}
+
+
+.form-control {
+    margin-bottom: 20px;
+    text-align: left;
+}
+
+.form-control label {
+    display: inline-block;
+    margin-bottom: 6px;
+}
+
+.form-control input {
+    border: 1px solid white;
+    border-radius : 5px;
+    padding: 10px;
+    display: block;
+    width : 100%;
+    color: #ffffff;
+
+}
+
+.users_info{
+    margin-top: 50px;
+    display:flex;
+    justify-content:center;
+    flex-direction:row;
+}
+.user_details {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-textarea {
-    margin-top: 15px;
-    width: 50%;
+    text-align: center;
+    width: calc(100% / 3);
+    margin: 10px;
+    border: 1px solid #f3f1f1;
+    border-radius: 3px;
 }
